# DaMaSCUS

./: .get_code_cov.sh  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: main.yml
analysis/: ER_CRESSTII.cpp  ER_General.hpp  General_Utilities.cpp  General_Utilities.hpp  Makefile  main.cpp
data/: README.md
docs/: Makefile  make.bat
docs/source/: citation.rst  conf.py  contact.rst  gettingstarted.rst  index.rst  license.rst  releases.rst  usage.rst
include/: Data_Generation.hpp  ER_CRESSTII.hpp  ER_General.hpp  ER_LUX.hpp  Earth_Model.hpp  General_Utilities.hpp  IC_Generator.hpp  PREM.hpp  Physical_Parameters.hpp  README.md  RN_Generators.hpp  Simulation_Trajectory.hpp  Simulation_Utilities.hpp  Trajectory_Class.hpp  Trajectory_Simulation.hpp  Underground_Distribution.hpp  module.hpp  version.hpp.in
plots/: DaMaSCUStoolbox.m
results/: README.md
simulation/: DaMaSCUS.cfg  IC_Generator.cpp  IC_Generator.hpp  Makefile  PREM.cpp  Physical_Parameters.cpp  Physical_Parameters.hpp  RN_Generators.cpp  Trajectory_Class.cpp  Trajectory_Class.hpp  Trajectory_Simulation.cpp  main.cpp
src/: CMakeLists.txt  Data_Generation.cpp  Earth_Model.cpp  General_Utilities.cpp  Physical_Parameters.cpp  README.md  Simulation_Trajectory.cpp  Simulation_Utilities.cpp  Underground_Distribution.cpp  main.cpp  module.cpp
src/analysis/: ER_CRESSTII.cpp  ER_General.cpp  ER_LUX.cpp  ER_LUX.hpp  General_Utilities.cpp  Physical_Parameters.cpp  Physical_Parameters.hpp  main.cpp
src/simulation/: General_Utilities.cpp  General_Utilities.hpp  IC_Generator.cpp  PREM.cpp  PREM.hpp  Physical_Parameters.hpp  RN_Generators.cpp  Trajectory_Class.cpp  Trajectory_Simulation.cpp  Trajectory_Simulation.hpp  main.cpp
tests/: CMakeLists.txt  test_Data_Generation.cpp  test_Earth_Model.cpp  test_Simulation_Trajectory.cpp  test_Simulation_Utilities.cpp  test_Underground_Distribution.cpp  test_module.cpp
